logs/zeus-lab804.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.8.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-0.23.egg-info'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/_pytest/vendored_packages'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.7.dist-info'...
Listing './lib/python3.5/site-packages/colorlog'...
Listing './lib/python3.5/site-packages/colorlog/tests'...
Listing './lib/python3.5/site-packages/colorlog-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pyfiglet'...
Listing './lib/python3.5/site-packages/pyfiglet/fonts'...
Listing './lib/python3.5/site-packages/pyfiglet-0.7.5.egg-info'...
Listing './lib/python3.5/site-packages/pytest-2.9.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/zeus_lab804-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/zeusproject'...
Listing './lib/python3.5/site-packages/zeusproject/_module'...
Compiling './lib/python3.5/site-packages/zeusproject/_module/controllers.py'...
***   File "./lib/python3.5/site-packages/zeusproject/_module/controllers.py", line 16
    from {{NAMEPROJECT}}.{{MODNAME}}.models import {{MODNAME | capitalize}}
       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zeusproject/_module/forms.py'...
***   File "./lib/python3.5/site-packages/zeusproject/_module/forms.py", line 17
    from {{NAMEPROJECT}}.{{MODNAME}}.models import {{MODNAME | capitalize}}
       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zeusproject/_module/models.py'...
***   File "./lib/python3.5/site-packages/zeusproject/_module/models.py", line 13
    from {{NAMEPROJECT}}.extensions import db
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zeusproject/_template'...
Listing './lib/python3.5/site-packages/zeusproject/templates'...
Listing './lib/python3.5/site-packages/zeusproject/templates/app'...
Compiling './lib/python3.5/site-packages/zeusproject/templates/app/__init__.py'...
***   File "./lib/python3.5/site-packages/zeusproject/templates/app/__init__.py", line 18
    from {{NAMEPROJECT}} import extensions
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zeusproject/templates/app/admin'...
Listing './lib/python3.5/site-packages/zeusproject/templates/app/public'...
Listing './lib/python3.5/site-packages/zeusproject/templates/app/users'...
Compiling './lib/python3.5/site-packages/zeusproject/templates/app/users/models.py'...
***   File "./lib/python3.5/site-packages/zeusproject/templates/app/users/models.py", line 20
    from {{NAMEPROJECT}}.extensions import db
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zeusproject/templates/config'...
Compiling './lib/python3.5/site-packages/zeusproject/templates/manage.py'...
***   File "./lib/python3.5/site-packages/zeusproject/templates/manage.py", line 12
    from {{NAMEPROJECT}} import create_app
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zeusproject/templates/static'...
Listing './lib/python3.5/site-packages/zeusproject/templates/static/css'...
Listing './lib/python3.5/site-packages/zeusproject/templates/static/img'...
Listing './lib/python3.5/site-packages/zeusproject/templates/static/js'...
Listing './lib/python3.5/site-packages/zeusproject/templates/templates'...
Listing './lib/python3.5/site-packages/zeusproject/templates/templates/admin'...
Listing './lib/python3.5/site-packages/zeusproject/templates/templates/admin/users'...
Listing './lib/python3.5/site-packages/zeusproject/templates/templates/public'...
Listing './lib/python3.5/site-packages/zeusproject/templates/templates/security'...
Listing './lib/python3.5/site-packages/zeusproject/templates/templates/security/email'...
Listing './lib/python3.5/site-packages/zeusproject/templates/templates/users'...
Listing './share'...
Listing './share/python-wheels'...
